# nbs-rs

./: Cargo.toml  LICENSE  README.md
src/: error.rs  header.rs  io.rs  lib.rs
src/noteblocks/: instrument.rs  layer.rs  mod.rs  note.rs
tests/: 1.nbs
