[package]
name = "nbs-rs"
version = "0.1.0"
authors = ["fludixx <fludixs@protonmail.com>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/Fludixx/nbs-rs"
documentation = "https://docs.rs/nbs-rs/0.1.0/nbs"
description = "NBS buffer decoder & encoder"
license = "MIT"

[lib]
name = "nbs"

[dependencies]
byteorder = "1.3.4"