[package]
name = "nbs-rs"
version = "0.1.1"
authors = ["fludixx <fludixs@protonmail.com>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/Fludixx/nbs-rs"
documentation = "https://docs.rs/nbs-rs"
description = "NBS buffer decoder & encoder"
license = "MIT"

[lib]
name = "nbs"

[dependencies]
byteorder = "1.3.4"